fix collapse function to expand from info section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,3 +8,6 @@ header{
 .hidden{
 	padding:0;
 }
+#collapse1{
+	padding:0;
+}
